--- a/src/main/resources/templates/reporting/reporting_result_summaries.vm
+++ b/src/main/resources/templates/reporting/reporting_result_summaries.vm
@@ -15,14 +15,14 @@
  *#
                 <div id="summaryModule" class="module summary-module toggle-wrap expanded #if( $collapsedSummaryModule )collapsed#end">
                     <div id="summaryModuleHeading" class="mod-header">
-                        <h2 class="toggle-title" onclick="everit.reporting.main.toggleModContent('summary')">Quick Summary</h2>
+                        <h2 class="toggle-title" onclick="everit.reporting.main.toggleModContent('summary')">$i18n.getText("jtrp.report.head.quick.summary")</h2>
                     </div>
                     <div class="mod-content">
                         <div class="summary-export-container action-button-container">
                             <div class="summary-export">
                                 <a id="summaries-export" class="criteria-selector aui-button aui-button-subtle" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadSummariesReport" onclick="everit.reporting.main.updateSummariesExportHref()">
 	                                <span class="aui-icon aui-icon-small aui-iconfont-export"></span>
-	                                <span class="button-label">Export</span>
+	                                <span class="button-label">$i18n.getText("jtrp.report.btn.export")</span>
 	                            </a>
 	                        </div>
                         </div>
@@ -54,7 +54,7 @@
                         </div>
                         <div class="grand-total-container">
                             <div class="grand-total">
-                                <p class="grand-total-item grand-total-header">Grand Total Logged</p>
+                                <p class="grand-total-item grand-total-header">$i18n.getText("jtrp.report.grand.total")</p>
                                 <p class="grand-total-item grand-total-value">$durationFormatter.exactDuration($worklogDetailsReport.grandTotal)</p>
                             </div>
                         </div>
