--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -511,5 +511,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
         <!-- Issue Collector script -->
         <script type="text/javascript" src="$issueCollectorSrc"></script>
     </section>
+    #if($analyticsCheck)
+      #parse("templates/common/analytics.vm")
+    #end
   </body>
 </html>
