--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -511,7 +511,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
         <!-- Issue Collector script -->
         <script type="text/javascript" src="$issueCollectorSrc"></script>
     </section>
-    #if($analyticsCheck)
+    #if($analyticsDTO.analyticsCheck)
       #parse("templates/common/analytics.vm")
     #end
   </body>
