--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -213,7 +213,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 	</div>
 	#parse("templates/reporting/reporting_popup.vm")
 </div>
-#if($analyticsCheck)
+#if($analyticsDTO.analyticsCheck)
 	#parse("templates/common/analytics.vm")
 #end
 </body>
