--- a/src/main/resources/templates/timetracker/missing_worklogs_report.vm
+++ b/src/main/resources/templates/timetracker/missing_worklogs_report.vm
@@ -163,7 +163,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:missing_
       #parse("templates/feedback/feedback_worklogs.vm")
     </div>
   </div>
-  #if($analyticsCheck)
+  #if($analyticsDTO.analyticsCheck)
 	#parse("templates/common/analytics.vm")
   #end
 </body>
